--- a/index.Rmd
+++ b/index.Rmd
@@ -216,13 +216,13 @@ TOTAL:| |	100 pontos
 
 Computador com Sistema Operacional à escolha do estudante, conexão à internet, câmera e microfone.
 
-Os softwares a serem instalados são: 
-
 Será necessário o uso de planilha eletrônica (o aplicativo pode ser de escolha do aluno) e ao longo da disciplina serão indicados aplicativos FOSS para outras análises.
 
 Os alunos serão cadastrados na plataforma `Teams`.
 
 Turma Virtual do SIGAA para postagens de conteúdos e outras comunicações.
+
+Acesso ao Moodle/AVA institucional.
 
 ---
 
@@ -277,7 +277,7 @@ Os estudantes que forem considerados em violação da política de integridade a
 
 2. **Planejamento da execução dos trabalhos:** Definir um cronograma a priori, contemplando entregas parciais alinhadas com os projetos e acompanhar as etapas de execução. 
 
-3. As atividades devem, necessariamente, acontecer de **forma colaborativa**. Para tanto, será criada uma wiki para cada grupo/atividade no Moodle/AVA institucional. Assim, será possível acompanhar a contribuição de cada estudante no desenvolvimento dos trabalhos. 
+3. As atividades devem, necessariamente, acontecer de **forma colaborativa**. Para tanto, será criada uma **wiki** para cada grupo/atividade no **Moodle/AVA** institucional. Assim, será possível acompanhar a contribuição de cada estudante no desenvolvimento de cada trabalho. 
 
 ---
 
